tests/baselines/reference/exportsAndImportsWithUnderscores1.errors.txt
m1.ts(5,5): error TS1005: ',' expected.


==== m1.ts (1 errors) ====
    var R: any
    export default R = {
        "__": 20,
        "_": 10
        "___": 30
        ~~~~~
!!! error TS1005: ',' expected.
    }
    
==== m2.ts (0 errors) ====
    import R from "./m1";
    const { __, _, ___ } = R;
    